# Com-DeepLearning

./: .gitignore  README.md
first_gpu_program/: .gitignore  CMakeLists.txt  README.md
first_gpu_program/configs/: training_filled.ini
first_gpu_program/datasets/MLP/: README.md
first_gpu_program/datasets/MLP/processed/: scaler.json  test.csv  train.csv  val.csv
first_gpu_program/datasets/MLP/processed/results/: pr_curve.csv  pr_curve_val.csv  training_results.csv
first_gpu_program/datasets/MLP/scripts/: preprocess_manufacturing_defects.py
first_gpu_program/include/: config_io.h  defect_dataset.h  gpu_adapter.h  gpu_kernel_sources.h  gpu_kernels.h  gpu_math_utils.h  lstm_network.h  mlp_network.h  training_pipeline.h
first_gpu_program/scripts/: autotune_lstm_sample_budget.py  estimate_lstm_gpu_capacity.py  plot_pr_curve.py  plot_training_results.py  preprocess_eco_lstm.py  preprocess_manufacturing_defects.py  run_lstm_tvt_pipeline.py
first_gpu_program/scripts/alter/pytorch/: run_lstm_tvt_pipeline.py  train_lstm_pytorch.py
first_gpu_program/src/: config_io.cpp  defect_dataset.cpp  gpu_adapter.cpp  lstm_network.cpp  main.cpp  mlp_network.cpp  training_pipeline.cpp
